--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ logo: "/assets/images/df_logo.jpg"
 # blog cover
 cover: "/assets/images/cA4aKEIPQrerBnp1yGHv_IMG_9534-3-2.jpg"
 
-name: 'Dirk Fabisch'
-author: 'Dirk Fabisch'
+name: 'Adrián Muñoz'
+author: 'Adrián Muñoz'
 author_image: "/assets/images/author.jpg"
 
 paginate:	5
