--- a/_config.yml
+++ b/_config.yml
@@ -3,15 +3,15 @@ markdown: redcarpet
 highlighter: pygments
 
 # Site settings
-title: "Adrián Muñoz"
+title: "Divúlgame.NET"
 description: > # this means to ignore newlines until "email:"
-   Pensamientos
+   Blog corporativo
 
 email: adrianmugnoz@gmail.com
 #blog logo
 logo: "/assets/images/df_logo.jpg"
 # blog cover
-cover: "/assets/images/cA4aKEIPQrerBnp1yGHv_IMG_9534-3-2.jpg"
+cover: "/assets/images/delfines.jpg"
 
 name: 'Adrián Muñoz'
 author: 'Adrián Muñoz'
