--- a/_config.yml
+++ b/_config.yml
@@ -3,51 +3,50 @@ markdown: redcarpet
 highlighter: pygments
 
 # Site settings
-title: "Divúlgame.NET"
+title: "Mediator"
 description: > # this means to ignore newlines until "email:"
-   Blog corporativo
-
-email: adrianmugnoz@gmail.com
+   A Jekyll theme - Medium inspired
+email: a-mail@mail.mail
 #blog logo
 logo: "/assets/images/df_logo.jpg"
 # blog cover
-cover: "/assets/images/delfines.jpg"
+cover: "/assets/images/cA4aKEIPQrerBnp1yGHv_IMG_9534-3-2.jpg"
 
-name: 'Adrián Muñoz'
-author: 'Adrián Muñoz'
+name: 'Dirk Fabisch'
+author: 'Dirk Fabisch'
 author_image: "/assets/images/author.jpg"
 
 paginate:	5
 
-url: "http://adrianmugnoz.github.io" # the base hostname & protocol for your site
-baseurl:
+url: "http://myblog.***.***" # the base hostname & protocol for your site
+baseurl: ""
 
 # social icons and sharing options
 social:
   - icon:	twitter
-    url:	https://twitter.com/adrianmugnoz
-    desc: Síguenos en Twitter
+    url:	https://twitter.com/dirkfabisch
+    desc: Follow me on twitter
     share_url: http://twitter.com/share
     share_title: ?text=
     share_link: "&amp;url="
 
- - icon: facebook
-   url:	https://facebook.com/divulgame
-   desc: Síguenos en Facebook
-   share_url: //www.facebook.com/sharer.php
-   share_title: ?t=
-   share_link: "&amp;u="
+#  - icon:	facebook
+#    url:	https://facebook.com/???
+#    desc: Connect with me facebook
+#    share_url: //www.facebook.com/sharer.php
+#    share_title: ?t=
+#    share_link: "&amp;u="
 
-  # - icon:	github
-  #   url:	https://github.com/adrianmugnoz
-  #   desc:	Fork me on github
-  #   share_url:
-  #   share_title:
-  #   share_link:
+  - icon:	github
+    url:	https://github.com/dirkfabisch
+    desc:	Fork me on github
+    share_url:
+    share_title:
+    share_link:
 
- - icon: google-plus
-   url:	https://www.google.com/+divulgame
-   desc: Añádeme en google+
-   share_url:
-   share_title:
-   share_link:
+#  - icon:	google-plus
+#    url:	https://google.com/???
+#    desc:	Add me on google+
+#    share_url:
+#    share_title:
+#    share_link:
